--- a/style.css
+++ b/style.css
@@ -541,6 +541,61 @@
   font-size: 1em;
 }
 
+.footer-about-mobile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 40px;
+}
+
+.footer-text-one {
+  font-size: 0.9em;
+}
+
+.footer-about {
+  display: none;
+}
+
+.footer-about-desktop {
+  display: none;
+}
+
+.see-more-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid rgb(187, 183, 183);
+  margin-left: 5%;
+  margin-right: 5%;
+  gap: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.more {
+  font-size: 0.8em;
+  color: black;
+}
+
+.arrow-down {
+  color: red;
+  width: 5%;
+}
+
+.arrow-up {
+  transform: rotate(180deg);
+}
+
+.container-speaker {
+  height: 450px;
+  overflow: hidden;
+  margin-bottom: 15px;
+}
+
+.speaker-class {
+  height: auto;
+}
+
 @media screen and (min-width: 768px) {
   .nav-bar {
     display: none;
@@ -727,5 +782,36 @@
     grid-template-columns: auto auto;
     grid-template-rows: repeat(3, auto);
     column-gap: 7px;
+  }
+
+  .footer-about-desktop {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 10%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-bottom: 20px;
+    background-color: #2e2e2e;
+  }
+
+  .footer-about-mobile {
+    display: none;
+  }
+
+  .footer-text-two {
+    color: white;
+    font-size: 0.8em;
+    margin-bottom: 15px;
+  }
+
+  .footer-text-one {
+    color: white;
+    font-size: 0.8em;
+    margin-bottom: 15px;
+  }
+
+  .partner {
+    display: none;
   }
 }
